--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         let chart = null;
         let selectedGroups = [];
         let selectedPEAs = [];
-        let loginCredentials = { username: 'admin', password: 'sr123' };
+        let loginCredentials = { username: 'npn', password: 'sr123' };
         let uniqueKPIs = [];
         let currentKPIIndex = 0;
 
