--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 </div>
             </div>
             <h3 id="loadingTitle" class="text-xl font-bold text-gray-800 mb-3">กำลังโหลดข้อมูล...</h3>
-            <p id="loadingMessage" class="text-gray-600 mb-4">กรุณารอสักครู่ ระบบกำลังดึงข้อมูลจาก Google Sheets</p>
+            <p id="loadingMessage" class="text-gray-600 mb-4">ระบบกำลังดึงข้อมูลจาก DATA BASE</p>
             <div class="w-full bg-gray-200 rounded-full h-2 mb-4">
                 <div id="loadingProgress" class="bg-blue-600 h-2 rounded-full transition-all duration-300" style="width: 0%"></div>
             </div>
