--- a/index.html
+++ b/index.html
@@ -1766,7 +1766,7 @@
             const progress = document.getElementById('loadingProgress');
             
             title.textContent = message;
-            messageEl.textContent = 'กรุณารอสักครู่ ระบบกำลังดึงข้อมูลจาก Google Sheets';
+            messageEl.textContent = 'ระบบกำลังดึงข้อมูลจาก DATA BASE';
             progress.style.width = '0%';
             
             indicator.classList.remove('hidden');
