--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="bg-white rounded-xl shadow-lg p-6">
                     <div class="flex justify-between items-center mb-4">
                         <h3 class="text-lg font-semibold text-gray-800 flex items-center">
-                            🏆 อันดับผลการดำเนินงาน
+                            🏆 ผลการดำเนินงาน
                         </h3>
                         <div class="flex space-x-2">
                             <button id="expandTableBtn" class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded-lg transition-colors text-sm">
