--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     <div id="tableModal" class="fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-50 hidden">
         <div class="w-full h-full p-4 flex flex-col">
             <div class="flex justify-between items-center mb-4">
-                <h3 class="text-2xl font-bold text-white">🏆 อันดับผลการดำเนินงาน</h3>
+                <h3 class="text-2xl font-bold text-white">🏆 ผลการดำเนินงาน</h3>
                 <button id="closeTableModal" class="text-white hover:text-gray-300 text-3xl bg-red-600 hover:bg-red-700 px-4 py-2 rounded-lg">
                     ✕ ปิด
                 </button>
